# MLOps-Course

./: README.md
HW01/HW01_A/: .dockerignore  01_dockerized_package_student.ipynb  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
HW01/HW01_A/data/processed/: .gitignore
HW01/HW01_A/reports/: hw01_a_run_report.md
HW01/HW01_A/src/airbnb_ops/: cli.py  config.py  extract.py  pii.py  transform.py  validate.py
HW01/HW01_B/: 02_sql_performance_metabase_student.ipynb  README.md
HW01/HW01_B/reports/: baseline_explain_analyze.txt  explain_notes.md  hw01_b_sql_performance.md
HW01/HW01_B/sql/: 01_baseline_neighbourhood_summary.sql  02_create_materialized_view.sql
HW01/HW01_C/: .gitignore  03_airflow_pipeline_student.ipynb  README.md
HW01/HW01_C/dags/: qbc12_hw01_samin_kakaei_airbnb_pipeline.py
HW01/HW01_C/reports/: hw01_c_airflow.md
HW01/HW01_C/screenshots/: .gitkeep
HW02/: README.md
HW02/HW02_A/: .gitignore  README.md
HW02/HW02_A/data/features/: listing_availability_features_v1_student.csv  listing_availability_features_v1_student.parquet  listing_availability_features_v1_student_metadata.json  listing_availability_features_v1_student_validation_report.json  pii_audit_v1_student.csv
HW02/HW02_A/notebooks/: 01_etl_pipeline_student.ipynb
HW02/HW02_B/: .gitignore  README.md
HW02/HW02_B/data/features/: listing_availability_features_v1_audit_cleaned.csv  (+2 more)
HW02/HW02_B/notebooks/: 02_mlflow_experiments_student.ipynb
HW02/HW02_C/student_hw02_fastapi_serving/: .gitignore  README.md  REPORT.md  requirements.txt
(+5 files in other folders)
