[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-ops"
version = "0.1.0"
description = "Airbnb operations data pipeline"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "typer",
    "rich",
]

[project.scripts]
airbnb-ops = "airbnb_ops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
